--- a/fju-alumni-choir/2025-salon-concert/index.html
+++ b/fju-alumni-choir/2025-salon-concert/index.html
@@ -1,1 +1,14 @@
-window.location.href = 'https://2025-salon-concert-fju-alumni-choir.my.canva.site/';
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>轉址中...</title>
+    <script>
+        window.location.href = 'https://2025-salon-concert-fju-alumni-choir.my.canva.site/';
+    </script>
+</head>
+<body>
+    <p>如果您的瀏覽器沒有自動跳轉，請 <a href="https://2025-salon-concert-fju-alumni-choir.my.canva.site/">點擊這裡</a>。</p>
+</body>
+</html>
