--- a/fju-alumni-choir/2025-salon-concert/index.html
+++ b/fju-alumni-choir/2025-salon-concert/index.html
@@ -9,6 +9,6 @@
     </script>
 </head>
 <body>
-    <p>如果您的瀏覽器沒有自動跳轉，請 <a href="https://2025-salon-concert-fju-alumni-choir.my.canva.site/">點擊這裡</a>。</p>
+    <p>如果您的瀏覽器沒有自動跳轉，請 <a href="https://fju-alumni-choir.my.canva.site/2025-salon-concert">點擊這裡</a>。</p>
 </body>
 </html>
