--- a/fju-alumni-choir/2025-salon-concert/index.html
+++ b/fju-alumni-choir/2025-salon-concert/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>轉址中...</title>
     <script>
-        window.location.href = 'https://2025-salon-concert-fju-alumni-choir.my.canva.site/';
+        window.location.href = 'hhttps://fju-alumni-choir.my.canva.site/2025-salon-concert';
     </script>
 </head>
 <body>
